--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,10 @@
   .heading {
     @apply text-center text-white text-[28px] sm:text-[33px] md:text-[45px] font-bold uppercase;
   }
+
+  .hero-height {
+    height: calc(max(88vh, 700px));
+  }
 }
 
 html {
